# kanae

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
qml/: MatIcon.qml  main.qml  resources.qrc
scripts/: dev-runner.ps1  installer.nsi  package.ps1
src/: audio_player.rs  cd_reader.rs  discord.rs  file_player.rs  library.rs  library_cache.rs  library_controller.rs  lrclib.rs  lyric_cache.rs  main.rs  musicbrainz.rs  player.rs  romaji.rs  smtc.rs  tui.rs
