[package]
name = "kanae"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
cd-da-reader = "0.4.1"
rodio = "0.22"
sha1 = "0.10"
base64 = "0.22"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
souvlaki = "0.8.3"
lofty = "0.22"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "pcm", "isomp4", "ogg", "aiff"] }
rfd = "0.15"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "fileapi", "winioctl", "ioapiset", "handleapi", "wincon"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"


[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
