[package]
name = "kanae"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Kanae"
identifier = "com.kanae.player"
category = "public.app-category.music"
short_description = "CD and file music player"
long_description = "Kanae is a Qt/QML + Rust music player supporting CDs and local files."

[features]
# Build variants
# - gui:    Qt/QML frontend (default)
# - tui:    ratatui terminal frontend (default)
# - hybrid: both (default — cargo build with no flags)
# To build GUI-only:  cargo build --no-default-features --features gui
# To build TUI-only:  cargo build --no-default-features --features tui
default = ["gui", "tui"]
gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib", "dep:rfd"]
tui = ["dep:ratatui", "dep:crossterm", "dep:unicode-width", "dep:ratatui-image"]

[dependencies]
# ── Shared ────────────────────────────────────────────────────────────────────
cd-da-reader = "0.4.1"
rodio = "0.22"
sha1 = "0.10"
base64 = "0.22"
ureq = { version = "3", features = ["json"] }
discordipc = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
rayon = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "pcm", "isomp4", "ogg", "aiff"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# ── GUI-only ─────────────────────────────────────────────────────────────────
cxx          = { version = "1.0",  optional = true }
cxx-qt       = { version = "0.8",  optional = true }
cxx-qt-lib   = { version = "0.8",  features = ["qt_full"], optional = true }
rfd          = { version = "0.15", optional = true }
souvlaki     = "0.8.3"

# ── TUI-only ──────────────────────────────────────────────────────────────────
ratatui      = { version = "0.30", optional = true }
crossterm    = { version = "0.29", features = ["event-stream"], optional = true }
unicode-width = { version = "0.2", optional = true }
ratatui-image = { version = "10",  default-features = false, features = ["crossterm", "image-defaults"], optional = true }
kakasi = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "fileapi", "winioctl", "ioapiset", "handleapi", "wincon"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
# Always present; only invoked when the 'gui' feature is active (see build.rs).
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
